Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/nested/5009484/X.out
X.java:22:30: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: T, X)
1 error
